--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -58,7 +58,7 @@ defaultFeaturedImage = "img/default.jpg" # used as default for featured images i
   showBreadcrumbs = true
   showDraftLabel = true
   showEdit = true
-  editURL = "https://github.com/scottmckendry/blog/"
+  editURL = "https://github.com/scottmckendry/blog/blob/main/content/"
   editAppendPath = true
   seriesOpened = false
   showHeadingAnchors = true
