--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -25,7 +25,7 @@ defaultFeaturedImage = "img/default.jpg" # used as default for featured images i
 # smartTOCHideUnfocusedChildren = true
 
 [header]
-  layout = "fixed" # valid options: basic, fixed, fixed-fill, fixed-fill-blur
+  layout = "basic" # valid options: basic, fixed, fixed-fill, fixed-fill-blur
 
 [footer]
   showMenu = true
