Add domain + analytics

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 # theme = "blowfish"
-# baseURL = "https://your_domain.com/"
+baseURL = "https://scottmckendry.tech/"
 defaultContentLanguage = "en"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
@@ -15,7 +15,7 @@ summaryLength = 0
 buildDrafts = false
 buildFuture = false
 
-# googleAnalytics = "G-XXXXXXXXX"
+googleAnalytics = "G-R0MB1J23PE"
 
 [imaging]
   anchor = 'Center'
