--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,14 +10,16 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
-#[[main]]
-#  name = "Blog"
-#  pageRef = "posts"
-#  weight = 10
+[[main]]
+ name = "Blog"
+ pageRef = "posts"
+ weight = 10
 
-#[[main]]
-#  name = "Parent"
-#  weight = 20
+[[main]]
+ identifier = "github"
+ weight = 20
+ pre = "github"
+ url = "https://github.com/scottmckendry"
 
 #[[main]]
 #  name = "example sub-menu 1"
@@ -58,10 +60,10 @@
 # the copyright notice. Configure as per the main menu above.
 
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 10
+[[footer]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 10
 
 # [[footer]]
 #   name = "Categories"
