--- a/.github/workflows/posts.yml
+++ b/.github/workflows/posts.yml
@@ -1,15 +1,15 @@
 name: Latest Posts
-on: 
+on:
     schedule:
-        - cron: '0 * * * *'
+        - cron: "0 0 * * *"
     workflow_dispatch:
-jobs: 
-    update-readme-with-blog: 
+jobs:
+    update-readme-with-blog:
         name: Update this repo's README with latest blog posts
         runs-on: ubuntu-latest
-        steps: 
+        steps:
             - uses: actions/checkout@v2
             - uses: gautamkrishnar/blog-post-workflow@master
-              with: 
-                max_post_count: "6"
-                feed_list: "https://scottmckendry.tech/posts/index.xml"
+              with:
+                  max_post_count: "6"
+                  feed_list: "https://scottmckendry.tech/posts/index.xml"
