feat: add comments with giscus

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -72,6 +72,7 @@ defaultFeaturedImage = "img/default.webp" # used as default for featured images 
   showAuthorsBadges = false
   showWordCount = false
   # sharingLinks = [ "linkedin", "twitter", "reddit", "pinterest", "facebook", "email", "whatsapp", "telegram"]
+  showComments = true
 
 [list]
   showHero = true
